# plant-system

./: CMakeLists.txt  Makefile  README.md  sdkconfig
main/: CMakeLists.txt
main/include/: base.h  button.h  dht11.h  http.h  led.h  measurements.h  mqtt.h  sensor.h  switch_kaku.h  wifi.h
main/src/: base.c  button.c  dht11.c  http.c  led.c  main.c  measurements.c  mqtt.c  sensor.c  switch_kaku.c  wifi.c
