idf_component_register(SRCS "src/main.c"
                            "src/sensor.c"
                            "src/wifi.c"
                            "src/base.c"
                            "src/measurements.c"
                            "src/dht11.c"
                            "src/switch_kaku.c"
                            "src/mqtt.c"
                            "src/led.c"
                            "src/button.c"
                            "src/http.c"

                    INCLUDE_DIRS "include")